--- a/TASKS/Task1/index.html
+++ b/TASKS/Task1/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Task 1 by Prashant Pandey </title>
-
+<title>Task 1 by Prashant Pandey</title>
 <style>
-/* ---------------------------------------
-      GLOBAL ANIMATED BACKGROUND
---------------------------------------- */
 body {
     margin: 0;
     font-family: Poppins, sans-serif;
@@ -25,16 +20,10 @@ body {
     50% { background-position: 50% 100%; }
     100% { background-position: 100% 50%; }
 }
-
-/* Light Mode */
 body.light-mode {
     background: linear-gradient(120deg, #ffffff, #dadada, #ececec);
     color: #000;
 }
-
-/* ---------------------------------------
-      MAIN CONTAINER
---------------------------------------- */
 .container {
     width: 480px;
     margin: 80px auto;
@@ -50,24 +39,18 @@ body.light-mode {
     from { opacity: 0; transform: translateY(20px); }
     to   { opacity: 1; transform: translateY(0); }
 }
-
-/* Title */
 h1 {
     text-align: center;
     letter-spacing: 2px;
     font-size: 28px;
     text-shadow: 0 0 10px cyan;
 }
-
-/* Dark/Light Mode Toggle */
 .toggle {
     position: absolute;
     top: -45px;
     right: 10px;
     cursor: pointer;
 }
-
-/* Search Bar */
 .search-box input {
     width: 100%;
     padding: 12px;
@@ -77,8 +60,6 @@ h1 {
     font-size: 16px;
     margin-bottom: 10px;
 }
-
-/* Task List */
 #taskList {
     margin-top: 20px;
     padding: 0;
@@ -93,14 +74,10 @@ h1 {
     justify-content: space-between;
     cursor: grab;
 }
-
-/* Completed */
 .completed span {
     text-decoration: line-through;
     opacity: 0.6;
 }
-
-/* Buttons */
 .task-buttons button {
     margin-left: 8px;
     padding: 6px 10px;
@@ -112,8 +89,6 @@ h1 {
 .complete-btn { background: #4caf50; }
 .edit-btn { background: #2196f3; }
 .delete-btn { background: #f44336; }
-
-/* Floating Add Button */
 .add-btn {
     position: fixed;
     bottom: 30px;
@@ -126,8 +101,6 @@ h1 {
     border: none;
     box-shadow: 0 0 20px cyan;
 }
-
-/* Modal */
 .modal {
     position: fixed;
     top: 0;
@@ -146,8 +119,6 @@ h1 {
     width: 360px;
     border-radius: 15px;
 }
-
-/* Confetti Canvas */
 #confetti {
     position: fixed;
     top: 0;
@@ -158,63 +129,31 @@ h1 {
 }
 </style>
 </head>
-
 <body>
-
 <canvas id="confetti"></canvas>
-
 <div class="container">
     <div class="toggle">
         <img src="https://img.icons8.com/fluency/48/sun.png" width="40" id="modeIcon">
     </div>
-
-    <h1>Prashant Task Manager</h1>
-
+    <h1>Bhai ye h meri class ka  Task Manager</h1>
     <div class="search-box">
         <input type="text" id="search" placeholder="Search tasks...">
     </div>
-
     <ul id="taskList"></ul>
-
-    <button class="clear-btn" id="clearAll" style="
-        width:100%; margin-top:15px; padding:10px;
-        background:red; border:none; color:#fff; border-radius:10px;
-    ">Clear All</button>
-
-    <button class="export-btn" id="exportTxt" style="
-        width:48%; margin-top:15px; padding:10px;
-        background:#673ab7; border:none; color:#fff; border-radius:10px;
-    ">Export TXT</button>
-
-    <button class="export-btn" id="exportJson" style="
-        width:48%; margin-top:15px; padding:10px;
-        background:#0091ea; border:none; color:#fff; border-radius:10px;
-    ">Export JSON</button>
+    <button class="clear-btn" id="clearAll" style="width:100%; margin-top:15px; padding:10px; background:red; border:none; color:#fff; border-radius:10px;">Clear All</button>
+    <button class="export-btn" id="exportTxt" style="width:48%; margin-top:15px; padding:10px; background:#673ab7; border:none; color:#fff; border-radius:10px;">Export TXT</button>
+    <button class="export-btn" id="exportJson" style="width:48%; margin-top:15px; padding:10px; background:#0091ea; border:none; color:#fff; border-radius:10px;">Export JSON</button>
 </div>
-
 <button class="add-btn" id="openModal">+</button>
-
-<!-- Modal -->
 <div class="modal" id="modalBox">
     <div class="modal-content">
         <h3>Add New Task</h3>
-
         <input type="text" id="modalInput" placeholder="Enter task"><br><br>
-
-        <button id="voiceBtn" style="
-            background:orange; padding:10px; border:none; border-radius:10px;
-        ">🎤 Voice Input</button>
-
-        <button id="addTaskModal" style="
-            background:#673ab7; padding:10px; border:none; border-radius:10px; color:#fff;
-        ">Add</button>
+        <button id="voiceBtn" style="background:orange; padding:10px; border:none; border-radius:10px;">🎤 Voice Input</button>
+        <button id="addTaskModal" style="background:#673ab7; padding:10px; border:none; border-radius:10px; color:#fff;">Add</button>
     </div>
 </div>
-
 <script>
-/* ============================================
-     INITIAL SETUP
-============================================ */
 const taskList = document.getElementById("taskList");
 const modal = document.getElementById("modalBox");
 const modalInput = document.getElementById("modalInput");
@@ -224,26 +163,13 @@ const modeIcon = document.getElementById("modeIcon");
 const search = document.getElementById("search");
 const clearAll = document.getElementById("clearAll");
 const voiceBtn = document.getElementById("voiceBtn");
-
-const categorySelect = document.getElementById("category");
-const prioritySelect = document.getElementById("priority");
-const dueDateInput = document.getElementById("dueDate");
-
-/* ============================================
-     LOAD TASKS
-============================================ */
 document.addEventListener("DOMContentLoaded", () => {
     loadTasks();
-
     if (localStorage.getItem("mode") === "light") {
         document.body.classList.add("light-mode");
         modeIcon.src = "https://img.icons8.com/fluency/48/moon.png";
     }
 });
-
-/* ============================================
-      DARK MODE
-============================================ */
 modeIcon.onclick = () => {
     document.body.classList.toggle("light-mode");
     if (document.body.classList.contains("light-mode")) {
@@ -254,65 +180,32 @@ modeIcon.onclick = () => {
         modeIcon.src = "https://img.icons8.com/fluency/48/sun.png";
     }
 };
-
-/* ============================================
-     OPEN/CLOSE MODAL
-============================================ */
 openModal.onclick = () => modal.style.display = "flex";
 window.onclick = e => { if (e.target === modal) modal.style.display = "none"; };
-
-/* ============================================
-     ADD TASK
-============================================ */
 addTaskModal.onclick = () => {
     let text = modalInput.value.trim();
     if (!text) return alert("Enter a task");
-
-    let category = categorySelect.value;
-    let priority = prioritySelect.value;
-    let dueDate = dueDateInput.value;
-
-    createTask(text, category, priority, dueDate, false);
-    saveTask(text, category, priority, dueDate, false);
-
+    createTask(text, false);
+    saveTask(text, false);
     speak("Task created by Prashant");
     confettiBurst();
-
     modalInput.value = "";
     modal.style.display = "none";
 };
-
-/* ============================================
-     CREATE TASK ELEMENT
-============================================ */
-function createTask(text, category, priority, dueDate, completed) {
+function createTask(text, completed) {
     const li = document.createElement("li");
     li.draggable = true;
-
-    const dueInfo = dueDate ? ` (Due: ${dueDate})` : "";
-
-    li.innerHTML = `
-        <span>${text} 
-        <small style="color:yellow">[${category}]</small> 
-        <small style="color:${priorityColor(priority)}">(${priority})</small>
-        ${dueInfo}
-        </span>
+    li.innerHTML = `<span>${text}</span>
         <div class="task-buttons">
             <button class="complete-btn">✔</button>
             <button class="edit-btn">✏</button>
             <button class="delete-btn">🗑</button>
-        </div>
-    `;
-
+        </div>`;
     if (completed) li.classList.add("completed");
-
-    /* Complete */
     li.querySelector(".complete-btn").onclick = () => {
         li.classList.toggle("completed");
         toggleComplete(text);
     };
-
-    /* Edit */
     li.querySelector(".edit-btn").onclick = () => {
         const newTask = prompt("Edit task:", text);
         if (newTask && newTask.trim() !== "") {
@@ -320,92 +213,60 @@ function createTask(text, category, priority, dueDate, completed) {
             li.querySelector("span").innerHTML = newTask;
         }
     };
-
-    /* Delete */
     li.querySelector(".delete-btn").onclick = () => {
         li.remove();
         removeTask(text);
     };
-
-    /* Drag & Drop */
     li.addEventListener("dragstart", dragStart);
     li.addEventListener("dragover", dragOver);
     li.addEventListener("drop", drop);
-
     taskList.appendChild(li);
 }
-
-/* Priority Color */
-function priorityColor(level) {
-    return level === "High" ? "red" : level === "Medium" ? "orange" : "cyan";
-}
-
-/* ============================================
-     STORAGE FUNCTIONS
-============================================ */
-function saveTask(text, category, priority, dueDate, completed) {
+function saveTask(text, completed) {
     const tasks = JSON.parse(localStorage.getItem("tasks")) || [];
-    tasks.push({ text, category, priority, dueDate, completed });
+    tasks.push({ text, completed });
     localStorage.setItem("tasks", JSON.stringify(tasks));
 }
-
 function loadTasks() {
     const tasks = JSON.parse(localStorage.getItem("tasks")) || [];
-    tasks.forEach(t => createTask(t.text, t.category, t.priority, t.dueDate, t.completed));
+    tasks.forEach(t => createTask(t.text, t.completed));
 }
-
 function updateTask(oldText, newText) {
     let tasks = JSON.parse(localStorage.getItem("tasks")) || [];
     tasks.forEach(t => { if (t.text === oldText) t.text = newText; });
     localStorage.setItem("tasks", JSON.stringify(tasks));
 }
-
 function toggleComplete(text) {
     let tasks = JSON.parse(localStorage.getItem("tasks")) || [];
     tasks.forEach(t => { if (t.text === text) t.completed = !t.completed; });
     localStorage.setItem("tasks", JSON.stringify(tasks));
 }
-
 function removeTask(text) {
     let tasks = JSON.parse(localStorage.getItem("tasks")) || [];
     tasks = tasks.filter(t => t.text !== text);
     localStorage.setItem("tasks", JSON.stringify(tasks));
 }
-
-/* ============================================
-     SEARCH
-============================================ */
 search.onkeyup = () => {
     const query = search.value.toLowerCase();
     document.querySelectorAll("#taskList li").forEach(li => {
         li.style.display = li.innerText.toLowerCase().includes(query) ? "flex" : "none";
     });
 };
-
-/* ============================================
-     CLEAR ALL
-============================================ */
 clearAll.onclick = () => {
     if (confirm("Delete all tasks?")) {
         localStorage.removeItem("tasks");
         taskList.innerHTML = "";
     }
 };
-
-/* ============================================
-     EXPORT TXT + JSON
-============================================ */
 document.getElementById("exportTxt").onclick = () => {
     let tasks = JSON.parse(localStorage.getItem("tasks")) || [];
     let text = tasks.map(t => t.text).join("\n");
-
     let blob = new Blob([text], { type: "text/plain" });
     let a = document.createElement("a");
     a.href = URL.createObjectURL(blob);
     a.download = "tasks.txt";
     a.click();
 };
-
 document.getElementById("exportJson").onclick = () => {
     let tasks = localStorage.getItem("tasks");
     let blob = new Blob([tasks], { type: "application/json" });
@@ -414,84 +275,43 @@ document.getElementById("exportJson").onclick = () => {
     a.download = "tasks.json";
     a.click();
 };
-
-/* ============================================
-     VOICE INPUT (Speech Recognition)
-============================================ */
 voiceBtn.onclick = () => {
     let rec = new webkitSpeechRecognition();
     rec.lang = "en-US";
     rec.onresult = (e) => modalInput.value = e.results[0][0].transcript;
     rec.start();
 };
-
-/* ============================================
-     SPEAKING FUNCTION (Male Voice)
-============================================ */
 function speak(text) {
     let msg = new SpeechSynthesisUtterance(text);
     msg.pitch = 1;
     msg.rate = 1;
-    msg.voice = speechSynthesis.getVoices().find(v => v.name.includes("Male")) ||
-                speechSynthesis.getVoices()[0];
+    msg.voice = speechSynthesis.getVoices().find(v => v.name.includes("Male")) || speechSynthesis.getVoices()[0];
     speechSynthesis.speak(msg);
 }
-
-/* ============================================
-     DRAG & DROP
-============================================ */
 let dragged;
 function dragStart(e) { dragged = this; }
 function dragOver(e) { e.preventDefault(); }
-function drop() {
-    if (dragged !== this) {
-        this.parentNode.insertBefore(dragged, this);
-        saveNewOrder();
-    }
-}
-
+function drop() { if (dragged !== this) { this.parentNode.insertBefore(dragged, this); saveNewOrder(); } }
 function saveNewOrder() {
     let newOrder = [];
-    document.querySelectorAll("#taskList li").forEach(li => {
-        newOrder.push(li.innerText.trim());
-    });
+    document.querySelectorAll("#taskList li").forEach(li => { newOrder.push(li.innerText.trim()); });
 }
-
-/* ============================================
-     CONFETTI
-============================================ */
 function confettiBurst() {
     let canvas = document.getElementById("confetti");
     let ctx = canvas.getContext("2d");
     canvas.width = innerWidth;
     canvas.height = innerHeight;
-
     const particles = [];
     for (let i = 0; i < 80; i++) {
-        particles.push({
-            x: Math.random() * canvas.width,
-            y: canvas.height,
-            size: Math.random() * 5 + 2,
-            speed: Math.random() * 4 + 2,
-            color: `hsl(${Math.random() * 360},100%,50%)`
-        });
+        particles.push({ x: Math.random() * canvas.width, y: canvas.height, size: Math.random() * 5 + 2, speed: Math.random() * 4 + 2, color: `hsl(${Math.random() * 360},100%,50%)` });
     }
-
     function draw() {
         ctx.clearRect(0,0,canvas.width,canvas.height);
-        particles.forEach(p => {
-            ctx.fillStyle = p.color;
-            ctx.fillRect(p.x,p.y,p.size,p.size);
-            p.y -= p.speed;
-        });
+        particles.forEach(p => { ctx.fillStyle = p.color; ctx.fillRect(p.x,p.y,p.size,p.size); p.y -= p.speed; });
     }
     let interval = setInterval(draw, 20);
-    setTimeout(() => {
-        clearInterval(interval);
-        ctx.clearRect(0,0,canvas.width,canvas.height);
-    }, 1000);
+    setTimeout(() => { clearInterval(interval); ctx.clearRect(0,0,canvas.width,canvas.height); }, 1000);
 }
 </script>
-
 </body>
 </html>
