--- a/TASKS/Task2/index.html
+++ b/TASKS/Task2/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Extreme Word Counter 3.0</title>
+<title>word counter by Prashant </title>
 <style>
 body {
   margin:0;
@@ -33,7 +33,7 @@ textarea:focus{transform:scale(1.02); box-shadow:0 12px 32px rgba(0,0,0,0.4);}
 </head>
 <body>
 
-<h1>Extreme Word Counter 3.0</h1>
+<h1> Word Counter</h1>
 <textarea id="myText" placeholder="Start typing..."></textarea>
 <div class="counter" id="charCounter">Characters left: 100</div>
 <div class="progress-container"><div class="progress-bar" id="progressBar"></div></div>
