--- a/TASKS/task5/index.html
+++ b/TASKS/task5/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Extreme Product Filter 4.0</title>
+<title>Prashant Products task 5 </title>
 <style>
 body {
   font-family:'Poppins',sans-serif;
