--- a/TASKS/Task4/index.html
+++ b/TASKS/Task4/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Extreme Registration Form</title>
+<title> Registration form task 4</title>
 <style>
 body {
   margin:0;
@@ -109,7 +109,7 @@ button:hover {
 </head>
 <body>
 
-<h1>Register</h1>
+<h1>Register </h1>
 <form id="regForm" novalidate>
   <div class="input-group">
     <input type="text" id="name" placeholder=" " required>
